[css-typed-om] Ignore surrounding whitespace in CSSNumericValue.parse.

Fixes an issue where CSSNumericValue.parse considers valid strings
surrounded by whitespace to be invalid.

Bug: 844290
Change-Id: I4c40044631276a611ef9a56aac21ddf09316a550
Reviewed-on: https://chromium-review.googlesource.com/1065532
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Darren Shen <shend@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560207}
Former-commit-id: b3c62041aaea962464d64516411371b9ef2c141d